<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Service_App"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:importantForAccessibility="yes"
        android:text="@string/service_app"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/NWU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="homeButton"
        android:text="@string/nwu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="292dp"
        android:layout_height="110dp"
        android:layout_marginBottom="330dp"
        android:text="@string/rate_a_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewRatingsButton"
        android:layout_width="302dp"
        android:layout_height="106dp"
        android:layout_marginBottom="194dp"
        android:text="@string/view_ratings_and_reviews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/locateServiceButton"
        android:layout_width="304dp"
        android:layout_height="100dp"
        android:layout_marginBottom="76dp"
        android:text="@string/locate_a_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="270dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toTopOf="@+id/rateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NWU"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/AppCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_thakgalo"
        app:layout_constraintBottom_toTopOf="@+id/searchView"
        app:layout_constraintEnd_toStartOf="@+id/NWU"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Service_App"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>